syntax = "proto3";

option go_package = "./tweets_service";

import "google/protobuf/timestamp.proto";

service TweetsService {
  rpc PostTweet (PostTweetRequest) returns (PostTweetResponse);
  rpc DeleteTweetById(DeleteTweetByIdRequest) returns (DeleteTweetByIdResponse);
  rpc GetTweetById (GetTweetByIdRequest) returns (GetTweetByIdResponse);
  rpc GetAllTweets (GetAllTweetsRequest) returns (GetAllTweetsResponse);
  rpc GetTweetsOfUser (GetTweetByIdRequest) returns (GetTweetByIdResponse);
}

message Tweet {
  string id = 1;
  string text = 2;
  string user_id = 3;
  string replies_to = 4;
  string quote_to = 5;
  google.protobuf.Timestamp created_at = 6;
}

message PostTweetRequest {
  string text = 2;
  string user_id = 3;
  string replies_to = 4;
  string quote_to = 5;
}

message PostTweetResponse {
  Tweet tweet = 1;
}

message DeleteTweetByIdRequest {
  string tweet_id = 1;
}

message DeleteTweetByIdResponse {}

message GetTweetByIdRequest {
  string tweet_id = 1;
}

message GetTweetByIdResponse {
  Tweet tweet = 1;
}

message GetAllTweetsRequest {}

message GetAllTweetsResponse {
  repeated Tweet tweets = 1;
}

message GetTweetsOfUserRequest {
  string user_id = 1;
}

message GetTweetsOfUserResponse {
  repeated Tweet tweets = 1;
}
